assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic styles */
    color: #363537;
    font-family: 'Encode Sans SC', sans-serif;
}

h,
h2,
h3 {
    font-family: 'Roboto', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #ffffff;
}

.hidden-heading {
    display: none;
}

/* Header */
header {
    background-color: #363537;
    color: #ffffff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #363537;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

#menu {
    font-size: 140%;
    letter-spacing: 1px;
    list-style-type: none;
    color: #F7EBE8;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #ffffff;
}

/* Navbar styles with drop down toggle */
nav {
    position: absolute;
    background-color: #363537;
    width: 100%;
    left: 0;
    padding: 0 1em;
    box-shadow: 0 2px 2px #363537;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {
    background-color: #F7EBE8;
    /* Main element to take up extra space and push footer down */
    flex: 1 0 auto;
    margin-top: 43px;
}

/* Hero section */
#hero {
    height: 500px;
    width: 100%;
    background: url("../images/hero1.avif") no-repeat center center/cover;
    position: relative;
}

#cover-text {
    /* Final value sets the opacity so it is semi-transparent */
    background-color: rgba(255, 87, 31, 0.7);
    font-size: 130%;
    position: absolute;
    bottom: 10px;
    width: 80%;
    max-height: 70%;
    padding-top: 20px;
    padding-left: 10px;
    padding-bottom: 10px;
}

#cover-text>h2,
#cover-text>h3 {
    color: #ffffff;
}

/* Reasons section */
#reasons {
    width: 90%;
    margin: 20px auto;
}

#reasons h2 {
    margin-bottom: 20px;
    text-align: center;
    font-size: 180%;
    color: #363537;
}

#reasons h3 {
    color: #363537;
}

#benefits-a>div,
#benefits-b>div {
    line-height: 20px;
    margin-bottom: 20px;
    font-family: 'Roboto', sans-serif;
}

#benefits p {
    padding: 0 20px;
}

#benefits hr {
    border-top: 1px solid #3a3a3a;
    margin: 5px 0;
}

#circle-cover-bg {
    background: url('../images/main1.avif') no-repeat top center / cover;
    height: 50vw;
    width: 50vw;
    margin-bottom: 20px;
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#benefits-image {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Session Times section */
#times {
    background: url('../images/footer.avif') no-repeat center/cover;
    display: flex;
    flex-wrap: wrap;
}

#times div {
    color: #F7EBE8;
    background-color: rgba(0, 0, 0, 0.6);
    padding: 15px;
    text-align: center;
    /* This will not wrap for smaller screens and divs will expand to fill available space */
    flex-basis: 200px;
    flex-grow: 1;
    /* Creates the grid */
    border: 2px solid white;
}

/* Gallery page */
#photos img {
    width: 100%;
    line-height: 1em;
}

#photos {
    line-height: 0;
}

/* Contact page */
main {
    /* Enlarge main element to push footer down*/
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 47px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
}

/* Form */
#contact {
    background-image: url("../images/match1.jpg");
    background-size: cover;
    background-position: center;
    padding: 20px 10% 0 10%;
    flex-grow: 1;
    color: #fafafa;
    font-family: 'Roboto', sans-serif;
}

#session-times {
    color: #fafafa;
    text-decoration: underline;
}

#contact-form {
    color: #ffffff;
    background-color: rgba(60, 60, 60, 0.6);
    padding: 30px;
}

#contact-form>h2 {
    color: #fafafa;
    margin-bottom: 20px;
}

.text-input {
    background: transparent;
    color: #fafafa;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 2px;
    padding: 0 5px;
}

.radio-buttons {
    width: 100%;
    display: list-item;
    justify-content: space-between;
    list-style-type: none;
}

.join-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px;
    font-size: 100%;
    background-color: #FF571F;
    color: #fafafa;
}

/* Footer */
footer {
    background-color: #363537;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #ffffff;
}

/* Media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;
    }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        padding-right: 1rem;
        width: fit-content;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 230%;
        line-height: 75px;
        margin: 0 0.5rem;
        color: #F7EBE8;
    }

    /* Main content */
    main {
        /* Push main content down to accommodate larger header */
        margin-top: 80px;
    }

    /* Hero */
    #cover-text {
        width: 300px;
        right: 50px;
    }

    /* Reasons section */
    #benefits-a,
    #benefits-b {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #benefits-a>div,
    #benefits-b>div {
        width: 70%;
    }

    #benefits-b>div {
        text-align: end;
        align-self: flex-end;
    }

    /* Gallery page */
    #photos {
        column-count: 3;
    }
}


/* Large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #ffffff;
    }

    /* Gallery page */
    #photos {
        column-count: 4;
    }
}

@media screen and (min-width: 1200px) {

    /* Reason section */
    #benefits {
        display: flex;
        flex-direction: row;
    }

    #benefits>div {
        flex: 1;
    }

    #benefits-image {
        order: 0
    }

    #benefits-a {
        order: 1;
    }

    #benefits-a>div {
        align-self: flex-start;
    }

    #benefits-b>div {
        align-self: flex-end;
    }
}

